2004-07-24 Vangelis Rokas <vrokas AT otenet.gr>

	* .version: increased version number to 2.4.3

	Adding version extension according to ChangeLog CVS revision
	* src/Makefile.in (target all): added dependency 'version.h'
	* (rule version.h): added rule to create version.h from ChangeLog,
	* (rule dep): added dependency version.h,
	* src/version.awk: AWK script to create version.h
	* src/SDCCdwarf2.c (dwWriteModule),
	* src/SDCCglue.c (initialComments),
	* src/SDCCmain.c (printVersionInfo): modified to write after
	version string the version extension number,
	* src/SDCCutil.c: included "version.h"
	* (getBuildNumber): NEW, returns SDCC's ChangeLog minor revision
	number,
	* src/SDCCutil.h: added prototype for getBuildNumber

	* src/SDCCmain.c (parseCmdLine): when sOpt is 'I' add rest in
	includeDirsSet, too,
	* src/SDCCsymt.c (checkSClass): don't emit error when a variable,
	const char [] is found in function prototype...

	* src/pic16/genarith.c (pic16_genUMult8XLit_8): optimization to omit
	moving to WREG with source is already in WREG,
	* src/pic16/gen.h: added AOP_FSR0 and AOP_FSR2 in enum,
	* src/pic16/gen.c (getFreePtr): updated to look for FSR0 and FSR2,
	* (aopForSym): stack'ed symbols are partially supported, added
	if-clause to support symbols in FARSPACE,
	* (sameRegs): added test for AOP_ACC to see if registers are same,
	* (pic16_freeAsmop): added case for AOP_FSR0 and AOP_FSR2,
	* (pic16_aopGet): added case for AOP_FSR0 and AOP_FSR2,
	* (pic16_popRegFromString): will not allocate a new register if it
	doesn't find one by name, bug may have introduced...
	* (pic16_popGet): added case for AOP_FSR0 and AOP_FSR2,
	* (genIpush): revived to use pic16 port's stack,
	* (genAddrOf): added incomplete case for stack'ed operand,
	* (genCast): optimized a pair of MOVFW,MOVWF to MOVFF
	* src/pic16/genutils.c (pic16_genNot): almot new vesrion for NOT,
	can handle multibyte operands,
	* src/pic16/glue.c (pic16_printIval*): some debug info added,